<resources>
    <string name="app_name">ArtShop</string>

    <!-- Login & Register -->
    <string name="login_title">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="email_address">Email cím</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration_prompt">Nincs még fiókod? Regisztrálj!</string>
    <string name="user_name_optional">Felhasználónév (opcionális)</string>
    <string name="email_address_mandatory">Email cím (kötelező)</string>
    <string name="password_mandatory">Jelszó (min. 6 karakter)</string>
    <string name="password_again">Jelszó újra</string>
    <string name="cancel">Mégse</string>
    <string name="app_logo_description">Alkalmazás logó</string>

    <!-- Art List -->
    <string name="search">Keresés…</string>
    <string name="cart">Kosár</string>
    <string name="logout">Kijelentkezés</string>
    <string name="settings">Beállítások</string>
    <string name="add_artwork">Új mű</string> <!-- Új string -->
    <string name="artwork_image_description">Műalkotás képe</string>
    <string name="add_to_cart">Kosárba</string>
    <string name="artist_label">Alkotó: %1$s</string> <!-- Formázott string -->
    <string name="cart_icon_description">Bevásárlókosár ikon</string>


    <!-- Sample Artwork Data (Arrays) - Helyezd ide a saját adataidat -->
    <string-array name="artwork_titles">
        <item>Absztrakt Kompozíció</item>
        <item>Csendélet Kancsóval</item>
        <item>Városi Fények</item>
        <item>Téli Táj</item>
        <item>Női Portré</item>
        <item>Geometrikus Formák</item>
    </string-array>
    <string-array name="artwork_descriptions">
        <item>Modern absztrakt festmény élénk színekkel.</item>
        <item>Klasszikus olajfestmény, realista stílusban.</item>
        <item>Impresionista alkotás az éjszakai városról.</item>
        <item>Akvarell festmény egy havas tájról.</item>
        <item>Finom vonalvezetésű pasztell portré.</item>
        <item>Minimalista grafika geometrikus elemekkel.</item>
    </string-array>
    <string-array name="artwork_prices">
        <item>120 000 Ft</item>
        <item>85 000 Ft</item>
        <item>210 000 Ft</item>
        <item>60 000 Ft</item>
        <item>95 000 Ft</item>
        <item>45 000 Ft</item>
    </string-array>
    <string-array name="artwork_artists">
        <item>Kiss Géza</item>
        <item>Nagy Mária</item>
        <item>Varga Péter</item>
        <item>Szabó Éva</item>
        <item>Kovács László</item>
        <item>Tóth Zsuzsanna</item>
    </string-array>

    <!-- Image resources - Győződj meg róla, hogy ezek a drawable-k léteznek! -->
    <array name="artwork_images">
        <item>@drawable/artwork_abstract</item>
        <item>@drawable/artwork_still_life</item>
        <item>@drawable/artwork_city_lights</item>
        <item>@drawable/artwork_winter</item>
        <item>@drawable/artwork_portrait</item>
        <item>@drawable/artwork_geometric</item>
    </array>

    <string name="add_to_cart_short">Kosár</string> <!-- Rövidebb változat gombhoz -->
    <string name="edit">Szerkesztés</string>
    <string name="delete">Törlés</string>

    <string name="empty_list_message">Nincs megjeleníthető műalkotás.\nAdj hozzá újat!</string>
    <string name="filter_by_artist">Szűrés alkotóra</string>
    <string name="sort">Rendezés</string>
    <string name="sort_by_date_desc">Dátum (legújabb elöl)</string>
    <string name="sort_by_artist_asc">Alkotó (A-Z)</string>
    <string name="sort_by_price_asc">Ár (növekvő)</string>
    <string name="sort_by_price_desc">Ár (csökkenő)</string>

    <string name="artwork_title_hint">Műalkotás címe *</string>
    <string name="artwork_artist_hint">Alkotó neve *</string>
    <string name="artwork_description_hint">Leírás</string>
    <string name="artwork_price_hint">Ár (Ft) *</string>
    <string name="save_artwork">Műalkotás Mentése</string>
    <string name="artwork_preview_image">Műalkotás előnézeti képe</string>
    <string name="select_image_from_gallery">Kép választása galériából</string>
    <string name="capture_image_with_camera">Kép készítése kamerával</string>
    <string name="filter_all_artists">Minden alkotó</string>

    <string name="cart_is_empty">A kosarad jelenleg üres.</string>
    <string name="checkout_order">Megrendelés Leadása</string>
    <string name="remove_from_cart">Eltávolítás a kosárból</string>
    <string name="artwork_thumbnail">Műalkotás kis képe</string>
    <string name="fullscreen_image_description">Teljes képernyős képnézet</string>
    <string name="close_fullscreen">Bezárás</string>
    <string name="total_price_label">Teljes ár:</string>

    <string name="app_tagline">Világhírű művészeti alkotások kereskedelme</string>
</resources>