<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/textViewRegTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/registration"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <!-- Opcionális Felhasználónév -->
        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewRegTitle"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/user_name_optional"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            />

        <EditText
            android:id="@+id/editTextUserEmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextUserName"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/email_address_mandatory"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            />

        <EditText
            android:id="@+id/editTextPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextUserEmailReg"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password_mandatory"
            android:inputType="textPassword"
            android:minHeight="48dp"
            />

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPasswordReg"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:minHeight="48dp"
            />


        <!-- Gombok egy LinearLayoutban a jobb elrendezésért -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/editTextPasswordConfirm"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:weightSum="2">

            <Button
                android:id="@+id/registerConfirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/registration"
                android:onClick="register" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/cancel"
                android:onClick="cancel" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>