<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addEditScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".AddEditArtworkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewArtworkPreview"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:padding="48dp"
            android:background="@color/image_placeholder_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/artwork_preview_image"
            app:srcCompat="@drawable/baseline_add_photo_alternate_24"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/baseline_photo_library_24"
            app:tint="@android:color/white"
            app:backgroundTint="?attr/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewArtworkPreview"
            app:layout_constraintEnd_toStartOf="@+id/fabCaptureImage"
            android:contentDescription="@string/select_image_from_gallery" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCaptureImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/baseline_photo_camera_24"
            app:tint="@android:color/white"
            app:backgroundTint="?attr/colorPrimary"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewArtworkPreview"
            app:layout_constraintEnd_toEndOf="@+id/imageViewArtworkPreview"
            android:contentDescription="@string/capture_image_with_camera" />


        <EditText
            android:id="@+id/editTextArtworkTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/artwork_title_hint"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewArtworkPreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextArtworkArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/artwork_artist_hint"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextArtworkTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextArtworkDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/artwork_description_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="3"
            android:gravity="top"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextArtworkArtist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextArtworkPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/artwork_price_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextArtworkDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ratingBarArtwork"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="8dp"/>

        <RatingBar
            android:id="@+id/ratingBarArtwork"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            app:layout_constraintTop_toTopOf="@+id/editTextArtworkPrice"
            app:layout_constraintBottom_toBottomOf="@+id/editTextArtworkPrice"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonSaveArtwork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save_artwork"
            app:layout_constraintTop_toBottomOf="@+id/editTextArtworkPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <ProgressBar
            android:id="@+id/progressBarUpload"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/buttonSaveArtwork"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>